blt3/grammar

code              : codetype code
                  | codetype
                  ;

codetype          : macrodef
                  | macrocall
                  | assembly
                  | error
                  | NEXT_STMT
                  ;

macrodef          : DOLLAR macrocall
                  | DOLLAR macrocall error
                  ;

macrocall         : macroprefix_stmt block
                  | macroprefix_stmt
                  ;

block             : INDENT code DEDENT
                  ;

macroprefix_stmt  : macroprefix NEXT_STMT
                  ;

macroprefix       : macroseq blk macroprefix
                  | blk macroprefix
                  | blk
                  | macroseq blk
                  | macroseq
                  ;

blk               : AT_ID
                  | AT
                  ;

macroseq          : macroseq_bddd ddd macroseq_addd
                  | macroseq_bddd
                  | macroseq_bddd ddd
                  | ddd
                  ;

ddd               : DOT_DOT_DOT
                  | DOT_DOT_DOT_ID
                  ;

macroseq_addd     : macroseq_addd macroelem
                  | macroelem
                  ;

macroseq_bddd     : macroseq_bddd macroelem
                  | macroelem_nd
                  ;

macroelem         : macroelem_nd
                  | DOLLAR
                  ;

macroelem_nd      : ID
                  | OPERATOR
                  | DOLLAR_ID
                  | DD_ID
                  | NUMBER
                  | STRING
                  ;

error             : BEGIN_ERROR assembly_code END_ERROR
                  | BEGIN_ERROR DOLLAR macroprefix END_ERROR
                  ;

assembly          : BEGIN_ASSEMBLY assembly_code END_ASSEMBLY
                  | BEGIN_ASSEMBLY DOLLAR macroprefix END_ASSEMBLY
                  ;

assembly_code     : assembly_code assembly_codetype
                  | assembly_codetype
                  ;

assembly_codetype : NUMBER
                  | STRING
                  | DD_ID
                  ;
